# qsl-cardhub

./: .gitignore  .taurignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Info.plist  LICENSE  README.md  hooks.nsi  tauri.conf.json
.cargo/: config.toml
.github/workflows/: README.md  build.yml  release.yml  reusable-quality-checks.yml  web-query-service.yml
assets/icons/: icon.icns
capabilities/: default.json
config/: SF_EXPRESS_CONFIG.md  printer.toml  sf_express_default.toml.example
config/profiles/: .example.toml  example.toml
config/templates/: address.toml  callsign.toml  default.toml  qsl-card-v1.toml  qsl-card-v2.toml
data/: cards.db
docs/: aliyun-cdn-setup.md  api-v2-usage.md  cdn-endpoint-setup.md  cloud-sync-api-spec.md  multi-tenant-design.md  sf-route-push-service.md  template.v2.md  v2-comprehensive-test-report.md  web-query-service-deploy.md
migrations/: 001_init.sql  002_add_cards.sql  2026.1.23.001_init.sql  2026.1.23.002_add_cards.sql  2026.1.24.002_add_cards.sql  2026.1.24.003_add_sf_express.sql  2026.1.24.004_add_app_settings.sql
openspec/: config.yaml  project.md
scripts/: README.md  build.bat  build.ps1  build.sh  generate-keys.sh  release.sh  sync-version.js  sync-version.sh  version.sh
src/: api.rs  api_v2.rs  lib.rs  main.rs
src/commands/: app_settings.rs  cards.rs  data_transfer.rs  export.rs  factory_reset.rs  logger.rs  mod.rs  platform.rs  printer.rs  printer_v2.rs  profile.rs  projects.rs  qrz_cn.rs  qrz_com.rs  qrz_herbertgao.rs  security.rs  sf_express.rs  sync.rs  tspl_config.rs
src/config/: mod.rs  models.rs  profile_manager.rs  template.rs  template_manager.rs  template_v2.rs
src/db/: app_settings.rs  cards.rs  export.rs  import.rs  mod.rs  models.rs  projects.rs  sf_express.rs  sqlite.rs
src/error/: mod.rs
tests/: components.rs  comprehensive_v2_test.rs  export_bindings.rs  integration.rs  qrz_cn_test_bh2ro.rs  qrz_cn_test_bi1utg.rs  qrz_cn_test_by1cra.rs  test_title_fix.rs
web/: README.md  eslint.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js  vite.config.ts
web_query_service/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  schema.sql  tsconfig.json  vite.config.ts  wrangler.toml.example
(+509 files in other folders)
