[package]
name = "qsl-cardhub"
version = "0.7.1"
edition = "2024"
authors = ["Herbert Software"]
description = "QSL 分卡助手 - 业余无线电 QSL 卡片管理工具"

# 生产构建优化
[profile.release]
opt-level = "z"     # 优化体积
lto = true          # 链接时优化
codegen-units = 1   # 单个代码生成单元（更好的优化）
panic = "abort"     # 缩小体积
strip = true        # 移除符号信息

[dependencies]
# Tauri 框架
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
base64 = "0.22"
urlencoding = "2.1"
percent-encoding = "2.3"

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# UUID 生成
uuid = { version = "1.0", features = ["v4", "serde"] }

# 全局静态变量
once_cell = "1.20"

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

# 日志
log = "0.4"
env_logger = "0.11"

# 系统目录
dirs = "6.0"

# 图像处理（PNG 生成）
image = "0.25"
imageproc = "0.26"
# PDF 生成（暂时禁用，等待版本兼容性问题解决）
# printpdf = { version = "0.7", features = ["embedded_images"] }

# 字体渲染
rusttype = "0.9"
ab_glyph = "0.2"

# 条形码生成
barcoders = { version = "2.0", features = ["image"] }

# 正则表达式
regex = "1.0"

# SQLite 数据库
rusqlite = { version = "0.38.0", features = ["bundled"] }

# Excel 导出
rust_xlsxwriter = "0.93.0"

# 编译时嵌入文件
include_dir = "0.7"

# 凭据加密存储
aes-gcm = "0.10"
pbkdf2 = "0.12"
rand = "0.9.2"
sha2 = "0.10"
hostname = "0.4"

# HTTP 客户端
reqwest = { version = "0.13.1", features = ["blocking", "cookies", "json", "form", "multipart"] }
scraper = "0.25.0"
encoding_rs = "0.8"

# 顺丰速运集成
md5 = "0.8"
pdfium-render = "0.8"

# Windows 平台依赖
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Graphics_Printing",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug"
] }

# 构建依赖
[build-dependencies]
tauri-build = "2"

# 开发依赖
[dev-dependencies]
tempfile = "3.8"
ts-rs = "12.0.1"

# Feature flags
[features]
default = []
ts-rs = ["dep:ts-rs"]

# ts-rs 作为可选依赖
[dependencies.ts-rs]
version = "12.0.1"
optional = true
features = ["chrono-impl"]
